fix image size on mobile

--- a/_sass/pages/creators/koi-network.scss
+++ b/_sass/pages/creators/koi-network.scss
@@ -99,6 +99,9 @@
     .imgs-group {
       padding: 100px 0;
       .img-wrapper {
+        width: 164px;
+        height: 164px;
+        margin-top: 20px;
         .img-network {
           width: 100%;
           margin-top: 16px;
